--- a/index.html
+++ b/index.html
@@ -24,17 +24,15 @@
         <img class="logo" src="images/Logo.jpg" alt="logo" />
 
         <ul class="nav">
-          <a href="#" target="_blank"><li>Product</li></a>
-          <a href="#" target="_blank"><li>Customers</li></a>
-          <a href="#" target="_blank"><li>Pricng</li></a>
-          <a href="#" target="_blank"><li>Resources</li></a>
-
-          <a href="#" target="_blank"
-            ><li><button class="nav-btn sign-in">Sign In</button></li></a
-          >
-          <a href="#" target="_blank"
-            ><li><button class="nav-btn sign-up">Sign Up</button></li></a
-          >
+         <li> <a href="#" >Product</li></a>
+          <<li>a href="#" >Customers</li></a>
+          <li><a href="#" >Pricng</li></a>
+          <li><a href="#" >Resources</li></a>
+          <li><a href="#">
+            <button class="nav-btn sign-in">Sign In</button>
+          </li></a>
+          <li><a href="#"><button class="nav-btn sign-up">Sign Up</button>
+          </li></a>
         </ul>
       </nav>
     </navigation>
